@@ -13,6 +13,8 @@ but wishing to use OBDII software expecting a serial device entry in /dev.
 
 .SH OPTIONS
 .IX Header "OPTIONS"
+.IP "-c|--modifyconf"
+Modify the config file dot-obdgpslogger(5) after successfully setting up pty
 .IP "-b|--baudrate <rate>"
 Attempt to set ftdi baudrate to this after launching.
 .IP "-v|--version"
